// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ControlPanel /> > renders with default desktop position and size 1`] = `
<div
  class="react-draggable"
  data-testid="control-panel-wrapper"
  id=":r2:"
  style="position: absolute; user-select: auto; width: auto; height: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,10px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <ul
    class="sc-gueXAH hzAavy"
  >
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Play"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r2:--play"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 6v12l10-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Fast Forward"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r2:--fast-forward"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M793.8 499.3L506.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.6c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8a16.14 16.14 0 0 0 0-25.4zm-320 0L186.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.5c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8c4.1-3.2 6.2-8 6.2-12.7 0-4.6-2.1-9.4-6.2-12.6zM857.6 248h-51.2c-3.5 0-6.4 2.7-6.4 6v516c0 3.3 2.9 6 6.4 6h51.2c3.5 0 6.4-2.7 6.4-6V254c0-3.3-2.9-6-6.4-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Quit Game"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r2:--quit-game"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 10h6c1.654 0 3 1.346 3 3s-1.346 3-3 3h-3v2h3c2.757 0 5-2.243 5-5s-2.243-5-5-5H9V5L4 9l5 4v-3z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Drag Items"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r2:--drag"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Resize Items"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r2:--resize"
      >
        <svg
          fill="none"
          height="2em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 11v8a1 1 0 0 0 1 1h8m-9 -14v-1a1 1 0 0 1 1 -1h1m5 0h2m5 0h1a1 1 0 0 1 1 1v1m0 5v2m0 5v1a1 1 0 0 1 -1 1h-1"
          />
          <path
            d="M4 12h7a1 1 0 0 1 1 1v7"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-eDDOjk bmayoZ"
      id=":r2:--volume-slider"
    >
      <button
        aria-label="Mute Volume"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-a7oj2r-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          style="max-height: 100%;"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.707 20.293-2.023-2.023A9.566 9.566 0 0 0 21.999 12c0-4.091-2.472-7.453-5.999-9v2c2.387 1.386 3.999 4.047 3.999 7a8.113 8.113 0 0 1-1.672 4.913l-1.285-1.285C17.644 14.536 18 13.19 18 12c0-1.771-.775-3.9-2-5v7.586l-2-2V4a1 1 0 0 0-1.554-.832L7.727 6.313l-4.02-4.02-1.414 1.414 18 18 1.414-1.414zM12 5.868v4.718L9.169 7.755 12 5.868zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20v-1.879l-2-2v2.011l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9h.879L3.102 7.223A1.995 1.995 0 0 0 2 9v6c0 1.103.897 2 2 2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <span
        class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium sc-jTrOVX idxNPr css-188mx6n-MuiSlider-root"
        style="width: 100px; margin: 0px 10px; max-height: 40px;"
      >
        <span
          class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
        />
        <span
          class="MuiSlider-track css-ttgsjq-MuiSlider-track"
          style="left: 0%; width: 100%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="0"
          style="left: 0%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="1"
          style="left: 10%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="2"
          style="left: 20%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="3"
          style="left: 30.000000000000004%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="4"
          style="left: 40%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="5"
          style="left: 50%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="6"
          style="left: 60.00000000000001%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="7"
          style="left: 70%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="8"
          style="left: 80%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="9"
          style="left: 90%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="10"
          style="left: 100%;"
        />
        <span
          class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1as9v07-MuiSlider-thumb"
          data-index="0"
          style="left: 100%;"
        >
          <input
            aria-label="Volume Slider"
            aria-orientation="horizontal"
            aria-valuemax="1"
            aria-valuemin="0"
            aria-valuenow="1"
            data-index="0"
            max="1"
            min="0"
            step="0.1"
            style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
            type="range"
            value="1"
          />
        </span>
      </span>
      <button
        aria-label="Max Volume"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-a7oj2r-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21c3.527-1.547 5.999-4.909 5.999-9S19.527 4.547 16 3v2c2.387 1.386 3.999 4.047 3.999 7S18.387 17.614 16 19v2z"
          />
          <path
            d="M16 7v10c1.225-1.1 2-3.229 2-5s-.775-3.9-2-5zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20V4a1 1 0 0 0-1.554-.832L6.697 7H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2zm0-8h3c.033 0 .061-.016.093-.019a1.027 1.027 0 0 0 .38-.116c.026-.015.057-.017.082-.033L12 5.868v12.264l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </li>
  </ul>
  <div />
</div>
`;

exports[`<ControlPanel /> > renders with default mobile position and size 1`] = `
<div
  class="react-draggable"
  data-testid="control-panel-wrapper"
  id=":r1:"
  style="position: absolute; user-select: auto; height: auto; display: inline-block; top: 0px; left: 0px; cursor: auto; transform: translate(0px,0px); max-width: 9007199254740991px; max-height: 9007199254740991px; box-sizing: border-box; flex-shrink: 0;"
>
  <ul
    class="sc-gueXAH hzAavy"
  >
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Play"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r1:--play"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 6v12l10-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Fast Forward"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r1:--fast-forward"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M793.8 499.3L506.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.6c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8a16.14 16.14 0 0 0 0-25.4zm-320 0L186.4 273.5c-10.7-8.4-26.4-.8-26.4 12.7v451.5c0 13.5 15.7 21.1 26.4 12.7l287.4-225.8c4.1-3.2 6.2-8 6.2-12.7 0-4.6-2.1-9.4-6.2-12.6zM857.6 248h-51.2c-3.5 0-6.4 2.7-6.4 6v516c0 3.3 2.9 6 6.4 6h51.2c3.5 0 6.4-2.7 6.4-6V254c0-3.3-2.9-6-6.4-6z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Quit Game"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r1:--quit-game"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 10h6c1.654 0 3 1.346 3 3s-1.346 3-3 3h-3v2h3c2.757 0 5-2.243 5-5s-2.243-5-5-5H9V5L4 9l5 4v-3z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Drag Items"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r1:--drag"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 11h-5V6h3l-4-4-4 4h3v5H6V8l-4 4 4 4v-3h5v5H8l4 4 4-4h-3v-5h5v3l4-4-4-4z"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-dmqGRC duGJpT"
    >
      <button
        aria-label="Resize Items"
        class="sc-beqWNU lbsFSi sc-hLseSp gIoKub noDrag"
        id=":r1:--resize"
      >
        <svg
          fill="none"
          height="2em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 11v8a1 1 0 0 0 1 1h8m-9 -14v-1a1 1 0 0 1 1 -1h1m5 0h2m5 0h1a1 1 0 0 1 1 1v1m0 5v2m0 5v1a1 1 0 0 1 -1 1h-1"
          />
          <path
            d="M4 12h7a1 1 0 0 1 1 1v7"
          />
        </svg>
      </button>
    </li>
    <li
      class="sc-eDDOjk bmayoZ"
      id=":r1:--volume-slider"
    >
      <button
        aria-label="Mute Volume"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-a7oj2r-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          style="max-height: 100%;"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21.707 20.293-2.023-2.023A9.566 9.566 0 0 0 21.999 12c0-4.091-2.472-7.453-5.999-9v2c2.387 1.386 3.999 4.047 3.999 7a8.113 8.113 0 0 1-1.672 4.913l-1.285-1.285C17.644 14.536 18 13.19 18 12c0-1.771-.775-3.9-2-5v7.586l-2-2V4a1 1 0 0 0-1.554-.832L7.727 6.313l-4.02-4.02-1.414 1.414 18 18 1.414-1.414zM12 5.868v4.718L9.169 7.755 12 5.868zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20v-1.879l-2-2v2.011l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9h.879L3.102 7.223A1.995 1.995 0 0 0 2 9v6c0 1.103.897 2 2 2z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
      <span
        class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium sc-jTrOVX idxNPr css-188mx6n-MuiSlider-root"
        style="width: 100px; margin: 0px 10px; max-height: 40px;"
      >
        <span
          class="MuiSlider-rail css-7o8aqz-MuiSlider-rail"
        />
        <span
          class="MuiSlider-track css-ttgsjq-MuiSlider-track"
          style="left: 0%; width: 100%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="0"
          style="left: 0%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="1"
          style="left: 10%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="2"
          style="left: 20%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="3"
          style="left: 30.000000000000004%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="4"
          style="left: 40%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="5"
          style="left: 50%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="6"
          style="left: 60.00000000000001%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="7"
          style="left: 70%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="8"
          style="left: 80%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="9"
          style="left: 90%;"
        />
        <span
          class="MuiSlider-mark MuiSlider-markActive css-z5sdnj-MuiSlider-mark"
          data-index="10"
          style="left: 100%;"
        />
        <span
          class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1as9v07-MuiSlider-thumb"
          data-index="0"
          style="left: 100%;"
        >
          <input
            aria-label="Volume Slider"
            aria-orientation="horizontal"
            aria-valuemax="1"
            aria-valuemin="0"
            aria-valuenow="1"
            data-index="0"
            max="1"
            min="0"
            step="0.1"
            style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
            type="range"
            value="1"
          />
        </span>
      </span>
      <button
        aria-label="Max Volume"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-a7oj2r-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <svg
          fill="currentColor"
          height="2em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="2em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21c3.527-1.547 5.999-4.909 5.999-9S19.527 4.547 16 3v2c2.387 1.386 3.999 4.047 3.999 7S18.387 17.614 16 19v2z"
          />
          <path
            d="M16 7v10c1.225-1.1 2-3.229 2-5s-.775-3.9-2-5zM4 17h2.697l5.748 3.832a1.004 1.004 0 0 0 1.027.05A1 1 0 0 0 14 20V4a1 1 0 0 0-1.554-.832L6.697 7H4c-1.103 0-2 .897-2 2v6c0 1.103.897 2 2 2zm0-8h3c.033 0 .061-.016.093-.019a1.027 1.027 0 0 0 .38-.116c.026-.015.057-.017.082-.033L12 5.868v12.264l-4.445-2.964c-.025-.017-.056-.02-.082-.033a.986.986 0 0 0-.382-.116C7.059 15.016 7.032 15 7 15H4V9z"
          />
        </svg>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </li>
  </ul>
  <div />
</div>
`;
